--- a/index.html
+++ b/index.html
@@ -13,24 +13,32 @@
   <h1>Olá Bem Vindo(a) a Feira dos Cursos tecnicos:</h1>
   <h3>Antes de voce entrar, precisamos de algumas informações:</h3>
   <form><strong>
-      <label for="nome">Nome Completo:</label>
-      <input type="text" id="nome" name="nome" required>
+      <label for="nome" class="qm">Nome Completo:</label>
+      <input type="text" id="nome" name="nome" required placeholder="NOME AQUI">
       </br>
-      <label for="email">
+      <label for="email" class="qm">
         E-MAIL:
       </label>
-      <input class="input-padrao" type="email" id="email" required>
+      <input class="input-padrao" type="email" id="email" required placeholder="E-MAIL">
       </br>
-      <label for="cpf">CPF</label>
-      <input type="tel" id="nome" name="nome" required>
+     <label for="nome" class="qm">QUEM É VOCÊ?</label>
+       <select class="select">
+         <option>RESPONSAVEL</option>
+         <option>ALUNO</option>
+         <option>PROFESSOR</option>
+       </select>
+     
       </br>
 
-      <label for="TELEFONE">TELEFONE:</label>
-      <input type="tel" id="nome" name="nome" required>
+      <label for="TELEFONE" class="qm">TELEFONE:</label>
+      <input type="tel" id="nome" name="nome" required placeholder="TELEFONE COM DDD">
       </br>
-      <input type="submit" value="ENVIAR O FORMULÁRIO">
+     <label for="nome" class="qm" id="hora">HORARIO DE ENTRADA</label>
+    <input class="input-padrao" type="datetime-local" id="email" required>
+    </br>
+      <input type="submit" value="ENVIAR O FORMULÁRIO" class="enviar">
   </br>
-    <a href="oi.html">AVALIE NOSSA FEIRA</br>CLIQUE AQ</a>
+    <a href="oi.html">AVALIE NOSSA FEIRA</br>CLIQUE AQUI</a>
 
 
 
